@@ -3716,3 +3716,8 @@ stopifnot(typeof(sum(x)) == "integer")
 x <- c(TRUE, FALSE)
 stopifnot(typeof(sum(x)) == "integer")
 ## double < 2.2.0
+
+## PR#7973: reversed log-scaled axis
+plot(1:100, log="y", ylim=c(100,10))
+stopifnot(axTicks(2) == 10*c(1,2,5,10))
+## empty < 2.2.0
